# Raito

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  mkdocs.yml
docs/: build_docs.sh  index.md  mkdocs.yml
docs/source/: index.md
docs/source/videos/: pres-1.webm
docs/stylesheets/: extra.css
scripts/: crun.sh
src/: app.rs  lib.rs  main.rs  raito_render.rs  render_window.rs  render_window_params.rs  rt_camera.rs  rt_geometry.rs  rt_objects.rs  rt_ray.rs  rt_render.rs  rt_render_output.rs  rt_render_scene.rs  rt_sampler.rs  rt_scene.rs  rt_shader_globals.rs  rt_shaders.rs  rt_test.rs  rt_types.rs
src/rt_objects/: rt_geometries.rs  rt_lights.rs  rt_object_base.rs
src/rt_shaders/: glass.rs  lambert.rs  lightShader.rs  metal.rs  rt_shader_base.rs  stateVector.rs  staticColor.rs
tests/scenes/: scene_000.xml  scene_001.xml
